# frontend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.pre-built  README.md  Trunk.toml  index.html  makefile  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: publish.yml
crates/core/: Cargo.toml
crates/core/src/: api.rs  constants.rs  lib.rs  storage.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs  pantry.rs  query.rs  recipe.rs  stats.rs  user.rs
scripts/: gzip_static.sh
src/: components.rs  contexts.rs  helpers.rs  main.rs  modals.rs  pages.rs
src/components/: collapse.rs  drawer.rs  image_links.rs  input.rs  loading.rs  stats.rs  toasts.rs
src/contexts/: api.rs  login.rs  modal_controller.rs  toasts.rs
src/modals/: base.rs  edit_pantry.rs  edit_recipe.rs  recipe.rs
src/modals/edit_pantry/: edit_item.rs  locations.rs  new_item.rs
src/modals/edit_recipe/: description.rs  image.rs  info.rs  ingredients.rs  labels.rs  long_description.rs  new.rs  steps.rs  title.rs
src/modals/recipe/: edit_title.rs
src/pages/: home.rs  login.rs  logout.rs  new_recipe.rs  pantry.rs  recipe.rs  recipe_print.rs  recipes.rs  signup.rs
