[package]
name = "my-cooking-codex-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.2.3", features = ["stable"] }
log = "0.4"
console_log = { version = "1", features = ["color"], optional = true }
console_error_panic_hook = "0.1.7"

[features]
default = ["console_log"]
